--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: left;
+  color: rgb(152, 167, 167);
+}
+
+div.b {
+  display: flex;
+  background-color: #d4c1af;
+  min-height: 0.5vh;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  position: relative;
+  top: 2.5px;
+}
+
+div.c {
+  display: flex;
+  background-color: #d4c1af;
+  min-height: 0.4vh;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  position: relative;
+  top: 5px;
+}
+
+div.bg {
+  display: flex;
+  border-style: solid;
+  border-width: 0px 15px;
+  border-color: white;
+  background-color: #e0dade;
+  min-height: 69vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: stretch;
+  position: relative;
+  top: 10px;
+  padding-right: 25px;
 }
