--- a/src/components/Component.css
+++ b/src/components/Component.css
@@ -3,4 +3,9 @@
     top: 25px;
     left: 25%;
     width: 50%;
+    background-color: #e6ece8;
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
 }
